<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/layout_width_200dp"
        android:layout_height="@dimen/layout_height_200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_10dp"
        android:contentDescription="@string/login_text_view_description"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imgLogo"
        android:background="@drawable/bg_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top_10dp"
                android:text="@string/login_text_view_description"
                android:textColor="@color/black"
                android:textSize="@dimen/text_view_text_size_40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="@dimen/layout_width_310dp"
                android:layout_height="@dimen/layout_height_122dp"
                android:layout_below="@id/tvLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top_30dp"
                android:background="@drawable/bg_text_field"
                android:elevation="@dimen/elevation_15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:outlineSpotShadowColor="@color/orange"
                tools:targetApi="p">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldUsername"
                    android:layout_width="@dimen/layout_width_300dp"
                    android:layout_height="@dimen/layout_height_60dp"
                    android:hint="@string/edit_text_username"
                    android:textColorHint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldPassword"
                    android:layout_width="@dimen/layout_width_300dp"
                    android:layout_height="@dimen/layout_height_60dp"
                    android:hint="@string/edit_text_password"
                    android:textColorHint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/layout_margin_top_40dp"
                android:text="@string/text_view_forgot_password_description"
                android:textSize="@dimen/text_view_text_size_15sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_below="@id/tvForgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_disabled_login_button"
                android:enabled="false"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
